# NationalParkAnnualAttendance

./: .gitignore  .nojekyll  EDA.html  EDA.ipynb  README.md  Tutorial.md  _quarto.yml  about.html  about.qmd  app.py  base_data.csv  csv_dictionary.json  dataAnalysis.ipynb  index.html  index.qmd  parks_df.csv  parks_scraper.html  parks_scraper.ipynb  pyproject.toml  search.json  test.py  zillow_scraper.ipynb
_site/: EDA.html  Tutorial.html  about.html  dataAnalysis.html  index.html  parks_scraper.html  search.json  sitemap.xml
data/: parks_df.csv
docs/: Tutorial.html  about.html  index.html  robots.txt
nationalparksdata/: __init__.py  eda.py  scraper.py
package/: __init__.py  loader.py  scraper.py
