[project]
name = "nationalparksdata"
version = "0.1.0"
description = "National Park attendance data scraper and dataset builder"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Gunnar Griffith", "Elijah Barnes"}
]

dependencies = [
    "requests",
    "python-dotenv",
    "pandas",
    "selenium",
    "ipykernel>=7.2.0",
    "seaborn>=0.13.2",
]

[tool.uv]
dev-dependencies = []
