[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nationalparksdata"
version = "0.1.1"
description = "National Park attendance data scraper and dataset builder"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"

authors = [
  { name = "Gunnar Griffith" },
  { name = "Elijah Barnes" }
]

dependencies = [
    "requests",
    "python-dotenv",
    "pandas",
    "selenium",
    "ipykernel>=7.2.0",
    "seaborn>=0.13.2",
    "streamlit>=1.56.0",
]

[tool.setuptools.packages.find]
include = ["nationalparksdata"]

[tool.uv]
dev-dependencies = []
